@@ -17,10 +17,10 @@ package ar.com.gtsoftware.dao;
 
 import ar.com.gtsoftware.entity.*;
 import ar.com.gtsoftware.search.ComprobantesProveedorSearchFilter;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.TypedQuery;
+import jakarta.persistence.criteria.*;
 import java.math.BigDecimal;
-import javax.persistence.EntityManager;
-import javax.persistence.TypedQuery;
-import javax.persistence.criteria.*;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Repository;
 
@@ -114,7 +114,7 @@ public class ComprobantesProveedorFacade
               nroFactura,
               root.get(ProveedoresComprobantes_.idRegistro)
                   .get(FiscalLibroIvaCompras_.numeroFactura));
-      p1 = cb.like(nroFactura, String.format("%%%s%%", vsf.getNumeroFactura()));
+      p1 = cb.like(nroFactura, "%%%s%%".formatted(vsf.getNumeroFactura()));
 
       p = appendAndPredicate(cb, p1, p);
     }
