@@ -17,11 +17,11 @@ package ar.com.gtsoftware.dao;
 
 import ar.com.gtsoftware.entity.*;
 import ar.com.gtsoftware.search.OrdenCompraSearchFilter;
-import javax.persistence.EntityManager;
-import javax.persistence.criteria.CriteriaBuilder;
-import javax.persistence.criteria.Predicate;
-import javax.persistence.criteria.Root;
-import javax.persistence.criteria.Subquery;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
+import jakarta.persistence.criteria.Subquery;
 import org.springframework.stereotype.Repository;
 
 @Repository
@@ -90,7 +90,7 @@ public class ProveedoresOrdenesCompraFacade
     if (sf.hasTxtFilter()) {
       String s = sf.getTxt().toUpperCase();
       Predicate p1 =
-          cb.like(root.get(ProveedoresOrdenesCompra_.observaciones), String.format("%%%s%%", s));
+          cb.like(root.get(ProveedoresOrdenesCompra_.observaciones), "%%%s%%".formatted(s));
       p = appendAndPredicate(cb, p1, p);
     }
 
