@@ -16,10 +16,10 @@
  */
 package ar.com.gtsoftware.dto.domain;
 
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Size;
 import java.util.Date;
 import java.util.List;
-import javax.validation.constraints.NotNull;
-import javax.validation.constraints.Size;
 import lombok.*;
 
 /**
@@ -57,6 +57,6 @@ public class SucursalesDto {
 
   @Override
   public String toString() {
-    return String.format("[%d] %s", id, nombreSucursal);
+    return "[%d] %s".formatted(id, nombreSucursal);
   }
 }
